# graduation

Final_Design/: CMakeLists.txt  CMakeLists.txt.user.6b4e30e  ContactItem.cpp  ContactItem.h  ContactItem.ui  MsgPage.h  clockwidget.cpp  clockwidget.h  clockwidget.ui  define.h  dialogemployeeinfo.cpp  dialogemployeeinfo.h  dialogemployeeinfo.ui  dialogfindpwd.cpp  dialogfindpwd.h  dialogfindpwd.ui  dialogleave.cpp  dialogleave.h  dialogleave.ui  dialogleavelog.cpp  dialogleavelog.h  dialogleavelog.ui  dialoglogin.cpp  dialoglogin.h  dialoglogin.ui  dialogmodifyinfo.cpp  dialogmodifyinfo.h  dialogmodifyinfo.ui  dialogpermit.cpp  dialogpermit.h  dialogpermit.ui  dialogpersoninfo.cpp  dialogpersoninfo.h  dialogpersoninfo.ui  dialogregister.cpp  dialogregister.h  dialogregister.ui  dialogsignin.cpp  dialogsignin.h  dialogsignin.ui  (+27 more)
Server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mysql.cpp  mysql.h  tcpserver.cpp  tcpserver.h
